--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "diatem-net/jin-context",
     "description": "Utility classes for context detection.",
     "type": "library",
-    "license": "GPLv3",
+    "license": "GPL-3.0-or-later",
     "authors": [
         {
             "name": "Loïc Gérard",
